--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "css-loader": "^0.28.11",
     "gh-pages": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.15.0",
     "webpack-cli": "^3.0.8",
