--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react-google-charts": "^3.0.15",
     "react-scripts": "1.1.4"
   },
   "scripts": {
