--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "react-code-blocks": "0.0.7",
     "react-google-charts": "^3.0.15",
     "react-scripts": "1.1.4"
   },
