--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate",
+  "name": "reacttimelinecharts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +18,6 @@
     "deploy": "gh-pages -d examples/dist",
     "publish-demo": "npm run build && npm run deploy"
   },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "main": "dist/index.js",
   "peerDependencies": {
     "react": "^16.3.0",
@@ -42,10 +41,6 @@
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/miteshtagadiya/package-boilerplate.git"
-  },
   "keywords": [
     "boilerplate",
     "code",
@@ -54,8 +49,5 @@
   ],
   "author": "Mitesh Tagadiya",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/miteshtagadiya/package-boilerplate/issues"
-  },
-  "homepage": "https://github.com/miteshtagadiya/package-boilerplate#readme"
+  "homepage": "https://miteshtagadiya.github.io/React-timeline-charts/"
 }
